fix unrequired horizontal scrolling due to extra long URLs

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -65,6 +65,7 @@ html {
                     a:hover,
                     a:active {
                         text-decoration: none;
+                        word-break: break-word;
                     }
 
                     .title {
